--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #banner {
     text-align:center;
     width:96.5%;
-    height:10vh;
+    height:8vh;
     background-color:gray;
     
 
@@ -9,7 +9,8 @@
 
 .bannertext{
     color: red;
-    font-size: 16px;
+    font-size: 24px;
     font-family: sans-serif;
     font-weight: bold;
+    padding-top: 10px;
 }
