--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 .bannertext{
     color: red;
-    font-size: 24px;
+    font-size: 5vw;
     font-family: sans-serif;
     font-weight: bold;
     padding-top: 10px;
