--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 #banner {
     text-align:center;
     background-color:rgb(219, 219, 219);
-    
+    padding-top: 1px;
+    height: 8vh;
 
 }
 
 .bannertext{
     color: red;
-    font-size: 2vw;
+    font-size: 2.5vh;
     font-family: sans-serif;
     font-weight: bold;
-    padding-top: 0.5vh;
+    
 }
