--- a/style.css
+++ b/style.css
@@ -29,3 +29,19 @@
 	box-shadow: 1px 1px 1px 2px rgb(217, 217, 217);
 
 }
+
+#bottomhalfcontainer{
+    display: flex;
+	flex-wrap: wrap;
+	align-content: space-evenly;
+	gap: 10px 20px;
+	height: 37.5vh;
+	margin-left: 10px;
+	margin-right: 25px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	padding: 20px;
+	background-color: white;
+	box-shadow: 1px 1px 1px 2px rgb(217, 217, 217);
+
+}
