--- a/style.css
+++ b/style.css
@@ -41,5 +41,10 @@
 	padding: 20px;
 	background-color: white;
 	box-shadow: 1px 1px 1px 2px rgb(217, 217, 217);
+	grid-template-areas: ". map map map ."
 
+}
+
+#mapcontainer{
+	grid-area: map;
 }
