--- a/style.css
+++ b/style.css
@@ -92,6 +92,10 @@
 	stroke-width: 1.5px;
 }
 
+.line{
+	pointer-events: all;
+}
+
 div.tooltip {	
     position: absolute;			
     text-align: center;			
