--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@
 
 #infobox{
 	grid-area: infobox;
+	display: flex;
 	box-shadow: 1px 1px 1px 1px rgb(217, 217, 217);
 }
 
@@ -113,6 +114,48 @@ div.tooltip {
     pointer-events: none;			
 }
 
-#merccheck{
-	background-color: #00D2BE
+.box {
+	width: 10px;
+	height: 10px;
+	border: 1px solid rgba(0,0,0,.2);
+}
+
+.mercbox{
+	background: #00D2BE;
+}
+
+.redbullbox{
+	background: #0508a8;
+}
+
+.ferraribox{
+	background:#DC0000;
+}
+
+.mclarenbox{
+	background:#FF8700;
+}
+
+.alpinebox{
+	background: #0044ff;
+}
+
+.alphatauribox{
+	background: #2B4562;
+}
+
+.alfaromeobox{
+	background: #490303;
+}
+
+.williamsbox{
+	background: #588ef1;
+}
+
+.haasbox{
+	background: #D9D9D9;
+}
+
+.astonmartinbox{
+	background: #006F62;
 }
