--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 	padding: 20px;
 	background-color: white;
 	box-shadow: 1px 1px 1px 2px rgb(217, 217, 217);
-	grid-template-areas: "infobox driverpos driverpos driverpos wdcwwcc wdcwcc";
+	grid-template-areas: "infobox driverpos driverpos driverpos wdcwcc wdcwcc";
 
 }
 
