adding bar chart

--- a/style.css
+++ b/style.css
@@ -165,3 +165,14 @@ div.tooltip {
 .astonmartinbox{
 	background: #006F62;
 }
+
+rect {
+	fill: steelblue;
+	fill-opacity: 0.8;
+  }
+  rect:hover {
+	fill-opacity: 1;
+  }
+  .axis {
+	font-size: smaller;
+  }
