--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 #banner {
     text-align:center;
-    background-color:rgb(219, 219, 219);
+    background-color:rgb(218, 6, 6);
     padding-top: 1px;
     height: 8vh;
 
 }
 
 .bannertext{
-    color: red;
+    color: rgb(255, 255, 255);
     font-size: 2.5vh;
     font-family: sans-serif;
     font-weight: bold;
-    
+    text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
 }
 
 #tophalfcontainer{
